@@ -1,1 +1,0 @@
-System tray monitor for Bacula - The Network Backup Solution
