@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 21:28:46 joerg Exp $
-sbin/bacula-tray-monitor
-share/examples/bacula/tray-monitor.conf
