@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2722 2024/04/26 15:18:09 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2723 2024/04/26 15:19:13 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4475,3 +4475,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed print/scribus-qt4 successor print/scribus-qt5 [wiz 2024-04-26]
 	Removed security/qt4-qtkeychain [wiz 2024-04-26]
 	Removed sysutils/bacula-qt-console successor sysutils/bacula-qt5-console [wiz 2024-04-26]
+	Removed sysutils/bacula-tray-monitor sucessor sysutils/bacula-tray-monitor-qt5 [wiz 2024-04-26]
